--- a/circumflex/index.html
+++ b/circumflex/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
@@ -13,10 +14,10 @@
     <title>Circumflex</title>
 </head>
 
-<body class="m-5">
+<body class="m-5" data-bs-theme="dark">
     <h1>Circumflex</h1>
 
-    <div class="d-flex flex-column w-25">
+    <div class=" d-flex flex-column w-50">
 
         <label for="input-text">
             Input text:
@@ -41,12 +42,16 @@
         </label>
         <input id="frequency" name="frequency" class="my-1" type="range" value="0.1" step="0.01" min="0" max="1" />
 
-        <button role="primary" class="my-1 mx-auto" id="submit-button">UNDERSCORE</button>
+        <button role="primary" class="btn btn-primary my-1 mx-auto" id="submit-button">UNDERSCORE</button>
 
         <label for="output-text">
             Output text:
         </label>
-        <textarea id="output-text" name="output-text" class="my-1" disabled="true" rows="5">Output goes here.</textarea>
+        <textarea id="output-text" name="output-text" class="my-1" readonly="true" rows="5">Output goes here.</textarea>
+        <button role="secondary" class="my-1 mx-auto btn btn-secondary copy-button"
+            data-clipboard-target="#output-text">
+            Copy
+        </button>
     </div>
 </body>
 
