--- a/circumflex/index.html
+++ b/circumflex/index.html
@@ -8,6 +8,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
         integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
@@ -17,41 +20,86 @@
 <body class="m-5" data-bs-theme="dark">
     <h1>Circumflex</h1>
 
-    <div class=" d-flex flex-column w-50">
+    <div>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#nav-circumflex">
+                    Circumflex
+                </button>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-aaahhh">aaahhh</button>
+            </li>
+        </ul>
+    </div>
 
-        <label for="input-text">
-            Input text:
-        </label>
-        <textarea id="input-text" name="input-text" class="my-1" rows="5"
-            placeholder="Paste text here to circumflex the shit out of it"></textarea>
+    <div class="tab-content" id="main-tab-content">
+        <div class="tab-pane fade show active" id="nav-circumflex">
+            <div class=" d-flex flex-column w-50">
+                <label for="input-text">
+                    Input text:
+                </label>
+                <textarea id="input-text" name="input-text" class="my-1" rows="5"
+                    placeholder="Paste text here to circumflex the shit out of it"></textarea>
 
-        <!--
-        <select id="interruptions" class="my-1" multiple size="8">
-        </select>
-        -->
+                <label for="interruptions">
+                    Interruptions, one phrase per line:
+                </label>
 
-        <label for="interruptions">
-            Interruptions, one phrase per line:
-        </label>
+                <textarea id="interruptions" name="interruptions" class="my-1" rows="8">
 
-        <textarea id="interruptions" name="interruptions" class="my-1" rows="8">
+                </textarea>
 
-        </textarea>
+                <label id="frequency-label" for="frequency">
+                </label>
+                <input id="frequency" name="frequency" class="my-1" type="range" value="0.1" step="0.01" min="0"
+                    max="1" />
 
-        <label id="frequency-label" for="frequency">
-        </label>
-        <input id="frequency" name="frequency" class="my-1" type="range" value="0.1" step="0.01" min="0" max="1" />
+                <button role="primary" class="btn btn-primary my-1 mx-auto" id="submit-button">UNDERSCORE</button>
 
-        <button role="primary" class="btn btn-primary my-1 mx-auto" id="submit-button">UNDERSCORE</button>
+                <label for="output-text">
+                    Output text:
+                </label>
+                <textarea id="output-text" name="output-text" class="my-1" readonly="true"
+                    rows="5">Output goes here.</textarea>
+                <button role="secondary" id="copy-button" class="my-1 mx-auto btn btn-secondary"
+                    data-clipboard-target="#output-text">
+                    Copy
+                </button>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="nav-aaahhh">
+            <div class="d-flex flex-column w-50">
+                <label for="aaahhh-input-text">
+                    Input text:
+                </label>
+                <textarea id="aaahhh-input-text" name="aaahhh-input-text" class="my-1" rows="5"
+                    placeholder="Paste text here"></textarea>
 
-        <label for="output-text">
-            Output text:
-        </label>
-        <textarea id="output-text" name="output-text" class="my-1" readonly="true" rows="5">Output goes here.</textarea>
-        <button role="secondary" class="my-1 mx-auto btn btn-secondary copy-button"
-            data-clipboard-target="#output-text">
-            Copy
-        </button>
+                <label id="aaahhh-frequency-label" for="frequency">
+                </label>
+                <input id="aaahhh-frequency" name="aaahhh-frequency" class="my-1" type="range" value="0.1" step="0.01"
+                    min="0" max="1" />
+
+                <div>
+                    <label for="aaahhh-finale">Include Finale?&nbsp;</label>
+                    <input id="aaahhh-finale" name="aaahhh-finale" class="my-1" type="checkbox" checked="true" />
+                </div>
+
+                <button role="primary" class="btn btn-primary my-1 mx-auto"
+                    id="aaahhh-submit-button">HNNNGGGHHH</button>
+
+                <label for="aaahhh-output-text">
+                    Output text:
+                </label>
+                <textarea id="aaahhh-output-text" name="aaahhh-output-text" class="my-1" readonly="true"
+                    rows="5">Output goes here.</textarea>
+                <button role="secondary" id="aaahhh-copy-button" class="my-1 mx-auto btn btn-secondary"
+                    data-clipboard-target="#aaahhh-output-text">
+                    Copy
+                </button>
+            </div>
+        </div>
     </div>
 </body>
 
